--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "vue": "^2.4.4",
+    "vue-loader": "^13.5.0",
     "vue-router": "^3.0.1"
   },
   "browserslist": [
